--- a/contact.html
+++ b/contact.html
@@ -210,10 +210,10 @@
                   <div class="info">
                     <h4>Social Media</h4>
                     <p>
-                      <a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
+                      <a href="https://www.facebook.com/profile.php?id=61557872214650&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i> Facebook</a>
                     </p>
                     <p>
-                      <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                      <a href="https://www.instagram.com/zoe_technology?igsh=Z3h3Z3hpZzFkZWcy"><i class="fab fa-instagram"></i> Instagram</a>
                     </p>
                   </div>
                 </div>
@@ -412,10 +412,10 @@
                 <h4 class="widget-title">Follow</h4>
                 <ul class="social-nav">
                   <li>
-                    <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+                    <a href="https://www.facebook.com/profile.php?id=61557872214650&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i>Facebook</a>
                   </li>
                   <li>
-                    <a href="#"><i class="fab fa-instagram"></i>Instagram</a>
+                    <a href="https://www.instagram.com/zoe_technology?igsh=Z3h3Z3hpZzFkZWcy"><i class="fab fa-instagram"></i>Instagram</a>
                   </li>
                 </ul>
               </div>
