--- a/projects.html
+++ b/projects.html
@@ -431,10 +431,10 @@
                 <h4 class="widget-title">Follow</h4>
                 <ul class="social-nav">
                   <li>
-                    <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+                    <a href="https://www.facebook.com/profile.php?id=61557872214650&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i>Facebook</a>
                   </li>
                   <li>
-                    <a href="#"><i class="fab fa-instagram"></i>Instagram</a>
+                    <a href="https://www.instagram.com/zoe_technology?igsh=Z3h3Z3hpZzFkZWcy"><i class="fab fa-instagram"></i>Instagram</a>
                   </li>
                 </ul>
               </div>
